# homeworks_c

./: .gitignore  README.md
04_libraries_and_optimization/src/: build.md  main.c  sort.c  sort.h  sort.s
05_stack_and_queue/: bracketsChecker.c  sortStation.c  stack.c  stack.h
05_stack_and_queue/src/: bracketsChecker.c  sortStation.c  stack.c  stack.h
11.09/src/: 1.c  2.c  3.c  4.c
15.09/src/: 1.c  2.c  3.c
comparing_binary/src/: CMakeLists.txt  compare.c  compare.h  main.c
comparing_binary/tests/: tests.c
test_1/src/: fibonacci.c  gnomeSort.c  palindrome.c
